<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="2"
        android:title="@string/action_save"
        android:icon="@drawable/ic_check_white_24dp"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_record"
        android:orderInCategory="3"
        android:title="@string/action_record"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="4"
        android:title="@string/action_reset_gps"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="4"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
</menu>