<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/Icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_terrain_grey_600_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="4dp"
                            android:text="@string/acre"
                            android:textColor="@color/text_54" />

                        <Spinner
                            android:id="@+id/spinner_acre"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:minHeight="?attr/actionBarSize" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/Icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@color/transparent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingRight="@dimen/activity_vertical_margin">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_area"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:errorTextAppearance="@style/Hint">

                            <EditText
                                android:id="@+id/text_area"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/area"
                                android:inputType="numberDecimal" />

                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/hectare_si"
                            style="@style/Subtitle"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="72dp"
                android:background="@color/text_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/Icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_grape_grey600_24dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            style="@style/Hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="4dp"
                            android:text="@string/grape"
                            android:textColor="@color/text_54" />

                        <Spinner
                            android:id="@+id/spinner_grape"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:minHeight="?attr/actionBarSize" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>